<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleFragment">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/fastest_time"
        app:layout_constraintBottom_toTopOf="@+id/high_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/high_score"
        android:layout_width="205dp"
        android:layout_height="61dp"
        android:layout_marginTop="92dp"
        android:gravity="center_horizontal"
        android:text="0"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <RadioGroup
        android:id="@+id/difficulty"
        android:layout_width="138dp"
        android:layout_height="112dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_score"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:baselineAligned="false"
            android:enabled="true"
            android:onClick="setDifficulty"
            android:text="@string/easy"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="391dp" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:enabled="true"
            android:onClick="setDifficulty"
            android:text="@string/hard"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="395dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="By MayorMono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

</androidx.constraintlayout.widget.ConstraintLayout>

